--- a/assignment04.qmd
+++ b/assignment04.qmd
@@ -6,7 +6,19 @@ editor: visual
 warning: false
 ---
 
+```{r}
+library(tidyverse)
+```
+
 ## Graph One
+
+Capital Bikeshare January 2023
+
+```{r}
+cabi <- read.csv(file = '202301-capitalbikeshare-tripdata.csv')
+```
+
+
 
 ## Graph Two
 
@@ -14,17 +26,3 @@ warning: false
 
 ## Graph Four
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
