Started a visualization of CaBi trip starts by member v casual

--- a/assignment04.qmd
+++ b/assignment04.qmd
@@ -9,6 +9,9 @@ warning: false
 ```{r}
 library(tidyverse)
 library(ggplot2)
+library(lubridate)
+library(sf)
+library(tigris)
 ```
 
 ## Graph One
@@ -19,6 +22,20 @@ Capital Bikeshare January 2023
 
 #Read in Capital Bikeshare data
 cabi <- read.csv(file = '202301-capitalbikeshare-tripdata.csv')
+
+start_station <- st_as_sf(cabi, coords = c("start_lng", "start_lat")) %>% 
+st_set_crs(value = 4326)
+
+dc <- states(progress_bar = FALSE) %>%
+ filter(STUSPS == "DC") 
+
+ggplot() +
+ geom_sf(data = dc) +
+ geom_sf(data = start_station,
+         aes(color = member_casual)) +
+ theme_void()
+
+
 
 ```
 
