--- a/assignment04.qmd
+++ b/assignment04.qmd
@@ -16,7 +16,7 @@ library(tigris)
 
 ## Graph One
 
-Capital Bikeshare January 2023
+[Capital Bikeshare data](https://capitalbikeshare.com/system-data) shows that both casual users and members began their trips throughout the Capital Bikeshare system in January 2023, including in DC, Maryland, and Virginia.
 
 ```{r}
 
@@ -29,12 +29,20 @@ st_set_crs(value = 4326)
 dc <- states(progress_bar = FALSE) %>%
  filter(STUSPS == "DC") 
 
+md <- counties("MD", progress_bar = FALSE) %>%
+  filter(COUNTYFP == "031" | COUNTYFP == "033") 
+
+va <- counties("VA", progress_bar = FALSE) %>%
+  filter(COUNTYFP == "013" |COUNTYFP == "059" | COUNTYFP == "510")  
+
 ggplot() +
- geom_sf(data = dc) +
- geom_sf(data = start_station,
-         aes(color = member_casual)) +
-  labs(title = "Capital Bikeshare Start Trips (Member Vs. Casual)") +
- theme_void()
+  geom_sf(data = dc) +
+   geom_sf(data = md) +
+   geom_sf(data = va) +
+  geom_sf(data = start_station,
+          aes(color = member_casual)) +
+   labs(title = "Member and Casual Trips in January 2023", subtitle = "Capital Bikeshare Starting Stations", caption = "Data Source: Capital Bikeshare", fill = "User Types") +
+  theme_void()
 
 
 
@@ -49,9 +57,14 @@ ggplot() +
 end_time <- ymd_hms(cabi$ended_at)
 day <- wday(end_time)
 
+# Graph Total Bikeshare Trips by Day of the Week
 cabi %>% 
-  ggplot() +
-  geom_bar(mapping = aes(x = day))
+   ggplot() +
+   geom_bar(mapping = aes(x = day)) +
+   labs(title = "Total Bikeshare Trips by Day of the Week", subtitle = "Capital Bikeshare, January 2023", caption = "Data Source: Capital Bikeshare") +
+   xlab("Day of the Week") +
+   ylab("Total Bikeshare Trips") +
+  theme_void()
 
 ```
 
