--- a/Assignment4KP.qmd
+++ b/Assignment4KP.qmd
@@ -1,10 +1,100 @@
 ---
-title: "Assignment4"
+title: "Assignment 4"
 format: html
 editor: visual
 ---
+_Kelly Primrose in collaboration with Diana Schroder_
+
+#Library Addition & Data Importing
+```{r}
+#| echo:false
+
+library(tidyverse)
+library(tinytex)
+library(ggplot2)
+library(lubridate)
+library(sf)
+library(tigris)
+
+cabi <- read.csv("202301-capitalbikeshare-tripdata.csv")
+
+```
+
+We decided to use the Capital Bikeshare ridership data from January 2023 to examine the paterns of CaBi riders at various points in time. 
+
+*Graph 1: Origin Points of Rides in DC*
+```{r}
+start_station <- st_as_sf(cabi, coords = c("start_lng", "start_lat"))%>% 
+  st_set_crs(value = 4326)
+
+dc <- states(progress_bar = FALSE) %>%
+ filter(STUSPS == "DC") 
+
+ggplot() +
+ geom_sf(data = dc) +
+ geom_sf(data = start_station,
+         aes(color = member_casual)) +
+ theme_void()+
+  labs(title = "Origin Points of Rides in DC", 
+       subtitle = "Majority of ridership is by members",
+       caption = "Data source: Capitol Bikeshare Trip History Data",
+       color = "Capitol Bikeshare Membership Status")
+
+ggsave(filename = "GG1_DCOrigin.png")
+```
+
+
+*Graph 2: Ridership Across DMV by Day of Week*
+```{r}
+# Put end time variable into date format and extract day of the week
+end_time <- ymd_hms(cabi$ended_at)
+day <- wday(end_time)
+cabi %>% 
+  ggplot() +
+  geom_bar(mapping = aes(x = day))+
+  labs(title = "Ridership By Day of Week", 
+       caption = "Data publicly available on the Capital Bikeshare website.")+
+  xlab("Day of week")+
+  ylab("Number of rides taken")
+
+ggsave(filename = "GG2_DayBar.png")
+```
+
+*Graph 3: Top 10 Most Popular Destination Stations
+```{r}
+
+#replacing empty instances of end_station_name with "Abandoned bike", as these unreturned bikes were likely left somewhere. 
+
+cabi <- cabi%>%
+  mutate(end_station_name = ifelse(end_station_name == "", "Abandoned bike", end_station_name))
+
+#grouping by end station and counting in descending order to see which stations are most popular destinations
+cabi%>%
+  group_by(end_station_name)%>%
+  summarize(count = n())%>%
+  arrange(desc(count))%>%
+  filter(count > 1630)%>%
+  ggplot() +
+  geom_count(mapping = aes(x=end_station_name, y = count))+
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+ggsave(filename = "populardests.png")
+
+```
+
+*Graph 4: Trip Duration by Members Versus Casual Riders*
 
 ```{r}
+end_time <- ymd_hms(cabi$ended_at)
+start_time <- ymd_hms(cabi$started_at)
+
+cabiduration <- data.frame(start_time, end_time)
+
+cabiduration%>%
+  difftime(end_time, start_time, units = "minutes")
+
+ended_at <- as.POSIXct.Date("ended_at")
+  mutate(duration = difftime(started_at, ended_at, units = "minutes"))
 
 ```
 
