--- a/assignment04.qmd
+++ b/assignment04.qmd
@@ -7,6 +7,7 @@ warning: false
 ---
 
 ```{r}
+#| echo: false
 library(tidyverse)
 library(ggplot2)
 library(lubridate)
@@ -14,11 +15,26 @@ library(sf)
 library(tigris)
 library(dplyr)
 library(forcats)
+library(ggrepel)
 ```
+
+## Using Capitol Bikeshare (CaBi) Ridership Data To Understand Transit Policies for DMV Commuters
+
+ As the DC Government moves to make MetroBus free for DC residents and employers grasp for any incentive to entice workers back to the office, we set out to understand how DMV residents utilize their most popular bikesharing service, Capitol Bikeshare. We are especially curious about the following questions:  
+ 
+ 1. Is CaBi widely used outside of DC, and is it relevant to MD and VA transportation policy?
+ 
+ 2. Are there patterns to what days CaBi is predominantly used on? 
+ 
+ 3. Are some destinations more popular biking destinations than others? 
+ 
+ 4. Do CaBi members ride differently than non-members?
+
+We have produced a graph for each of these questions showing the results from the data. 
 
 ## Graph One
 
-[Capital Bikeshare data](https://capitalbikeshare.com/system-data) shows that both casual users and members began their trips throughout the Capital Bikeshare system in January 2023, including in DC, Maryland, and Virginia.
+[Capital Bikeshare data](https://capitalbikeshare.com/system-data) shows that both casual users and members began their trips throughout the Capital Bikeshare system in January 2023, including in DC, Maryland, and Virginia. Although there is clearly a clustering of ridership in central DC, the usage in the suburbs of Maryland and Virginia is still significant, and may warrant further study by policymakers in those regions. It does seem as though CaBi ridership roughly traces the outer spokes of the Red, Orange, and Green metro lines, so perhaps we might see a correlation between business days and ridership numbers as commuters make use of the bikes to get to and from work. 
 
 ```{r}
 
@@ -52,7 +68,7 @@ ggplot() +
 
 ## Total Bikeshare Trips by Day of the Week
 
-According to [Capital Bikeshare data](https://capitalbikeshare.com/system-data), the total bikeshare trips in January 2023 were highest on Mondays and Tuesdays, and similar all other days of the week.
+According to [Capital Bikeshare data](https://capitalbikeshare.com/system-data), the total bikeshare trips in January 2023 were highest on Mondays and Tuesdays, and similar all other days of the week. This is one piece of evidence supporting our theory that commuters are a driving consumer base for CaBi. 
 
 ```{r}
 # Put end time variable into date format and extract day of the week
@@ -75,6 +91,7 @@ cabi %>%
 ```
 
 ## Graph Three: Top 10 Most Popular Destination Stations
+If commuters are in fact the driving force behind CaBi, then we would expect to see a strong lean towards metro stations among the top 10 Destinations for CaBi riders. Surprisingly, empty values were by far the most popular value in the destination field. This indicates that perhaps CaBi hubs are not widely dispersed enough, as our guess is that these bikes were left somewhere convenient for the rider that didn't come with an existing CaBi stand. Thankfully, our theory got a bit of a boost from the second most popular destination, which turned out to be Union Station. Yet, numbers 3 and  proved to be relatively far away from stations, so this theory will need further investigation.  
 
 ```{r}
 
@@ -93,22 +110,22 @@ cabi%>%
   geom_count(mapping = aes(x=end_station_name, y = count))+
   labs(title = "Top 10 Destinations By Rider End Points",
        subtitle = "Unreturned Bikes Lead Over Any Destination", 
-       caption = "Data source: Capitol Bikeshare Trip History Data",
-       n = "Riders Who Stopped at this Destination")+
-  ylab("Count")
-  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+       caption = "Data source: Capitol Bikeshare Trip History Data")+
+  ylab("Number of Riders")+
+  xlab("Destination")+
+ theme(axis.text.x = element_text(angle = 15))
 
 ggsave(filename = "populardests.png")
-ungroup()
+
 ```
 ## Graph Four: Trip Duration by Members Versus Casual Riders*
+
+Finally, we wanted to see if having a CaBi membership or not would change your likelihood of riding for long durations of time. We thought that since CaBi is a pay-to-use service, casual users would limit their time to avoid higher fares. However, it seems that when you need a CaBi, you just need a CaBi. Perhaps this means that the company's pricing structure is fair enough that users don't feel a strong pressure to self-regulate. The average trip duration was about 20 minutes, which is much higher than we had initially expected. Additionally, casual users outweigh members at every distance point, which we also thought was interesting. 
 
 ```{r}
 #I'm creating a variable for ride duration so I can compare duration for members vs casuals
 cabi <- cabi%>%
   mutate(duration = as.numeric(difftime(end_time, start_time, units = "mins")))
-
-
 
 cabi%>%
   ggplot(aes(x=duration, fill = member_casual)) +
